<resources>
    <string name="app_name">SG Spot Sports</string>
    <string name="locator">Facility Locator</string>
    <string name="planner">Activity Planner</string>
    <string name="kaki">Kaki System</string>
    <string name="tracker">Activity Tracker</string>
    <string name="account">My Account</string>
    <string name="setting">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="email_address">mavewonders@gmail.com</string>
    <string name="reset">reset</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>

    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Search for the nearest facility</string>

    <string name="google_maps_API_key">AIzaSyAcLYlos0rQKO2ZCZLXZMfAHFsjGo4sdVo</string>
    <string name="title_activity_maps">Map</string>

    <string name="get_device_location">Get device"'"s location </string>
    <string name="magnifying_glass">Magnifying glass</string>
    <string name="get_place_info">Get place"'"s info</string>
    <string name="select_nearby_place">Select nearby places</string>

    <string name="already_login">Already have an account? Login</string>
    <string name="signup">Don"'"t have account? Sign Up</string>
    <string name="verify_now">Email Not Verified (Click to Verify)</string>
    <string name="verified">Email Verified</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tap_on_camera">Tap on camera to choose profile picture</string>

    <string name="forgot_password">Forgot your password?</string>
    <string name="request_sign_up">Don"'"t have account? Sign Up</string>
    <string name="forgot_password_content">Please enter your email address below, and follow the link sent to your email to reset your password.</string>
    <string name="logout">Log Out</string>
    <string name="account_settings">Account Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="you_may_update_your_status_here">You may update your status here</string>
    <string name="your_status">Your status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="default_notification_channel_id">SSS_CH_01</string>
    <string name="save_to_calendar">Save to Calendar</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_start_time">SELECT START TIME</string>
    <string name="select_end_time">SELECT END TIME</string>

    <string name="start_time_input"><![CDATA[Select Start Time —>]]></string>
    <string name="end_time_input"><![CDATA[Select End Time —>]]></string>
    <string name="date_input"><![CDATA[Select Date —>]]></string>

    <string name="activity_title">Activity Title:</string>
    <string name="activity_information">Activity Information:</string>
    <string name="receiver_message">Message</string>
    <string name="receiver_time">00:00</string>
    <string name="sender_time">00:00</string>
    <string name="sender_message">Message</string>
    <string name="change_your_status">Change your status</string>
    <string name="change_your_image">Change your image</string>
    <string name="manage_your_list_of_markers">Manage your list of markers</string>
    <string name="name">Name</string>
    <string name="facility_image">Facility Image</string>
    <string name="facility_name">Facility Name</string>
    <string name="phone">Phone</string>
    <string name="directions">Directions</string>
    <string name="add_to_activity_planner">Add to Activity Planner</string>
    <string name="description">Description</string>
    <string name="description_of_the_sports_facility">Description of the sports facility</string>
    <string name="facility_address">Facility Address</string>
    <string name="enter_the_facility_name">Enter the facility name</string>
    <string name="facility_name_title">Facility Name:</string>
    <string name="description_2">Description:</string>
    <string name="enter_the_description_for_the_facility">Enter the description for the facility</string>
    <string name="save">Save</string>
    <string name="type_of_sports">Type of Sports</string>
    <string name="facility_type">Facility type:</string>
    <string name="tap_on_the_logo_below_to_upload_photo">Tap on the logo below to upload photo</string>
    <string name="please_drag_map_to_your_address">Please drag map to your address..</string>
    <string name="please_select_the_facility_s_location">Please select the facility\'s location</string>

</resources>
