<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary" />
        -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tap_on_the_logo_below_to_upload_photo"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/upload_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/ic_upload_photo"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_below="@id/upload_image"
                android:layout_marginBottom="3dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setting_facility_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="18dp"
                android:text="@string/facility_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sports_type_drop_down_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                >

            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="18dp"
            android:text="@string/facility_name_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editTextFacilityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_orange_transparent"
            android:hint="@string/enter_the_facility_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/description_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_orange_transparent"
            android:gravity="start|top"
            android:hint="@string/enter_the_description_for_the_facility"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="5"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/marker_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button_solid"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:text="@string/save"
            android:textColor="@color/icons"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>