<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_background" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_profile_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-75dp"
            android:background="@drawable/profile_circular_border"
            android:elevation="5dp"
            android:padding="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default_avatar" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:elevation="4dp"
            android:paddingBottom="30dp"
            android:background="#ebca0707">

            <TextView
                android:id="@+id/settings_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="@string/name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_profile_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/you_may_update_your_status_here"
                android:textColor="#fff"
                android:textSize="14sp" />

            <!-- Setting icon set to invisible -->
            <ImageView
                android:id="@+id/drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_setting"
                android:visibility="invisible"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_manage_markers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:elevation="3dp"
                android:padding="20dp"
                android:text="@string/manage_your_list_of_markers"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/text_change_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:elevation="3dp"
                android:padding="20dp"
                android:text="@string/change_your_image" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>


            <TextView
                android:id="@+id/text_change_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#fff"
                android:clickable="true"
                android:focusable="true"
                android:elevation="3dp"
                android:padding="20dp"
                android:text="@string/change_your_status" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_below="@id/profile_layout"
            android:background="@drawable/rounded_button_solid"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/change_image"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/button_change_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/button_change_image"
            android:background="@drawable/rounded_button_solid"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/change_status"
            android:textColor="@color/icons"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:visibility="invisible"
            />


    </RelativeLayout>

</ScrollView>