<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/icons">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Log in to your account"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:elevation="10dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_border">


            <EditText
                android:id="@+id/email"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_gravity="center_horizontal"
                tools:ignore="InvalidImeActionId" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold"
                android:background="@color/accent"/>

            <Button
                android:id="@+id/email_sign_out_button"
                style="?android:textAppearanceSmall"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_out"
                android:textStyle="bold"
                android:background="@color/accent"/>

            <Button
                android:id="@+id/add_item_screen"
                style="?android:textAppearanceSmall"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@color/accent"
                android:text="Add Items to Database"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>